<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.trinet</groupId>
	<artifactId>api-bnft-nwband-bpc</artifactId>
	<version>20191202.1.BNFT-14112</version>
	<packaging>war</packaging>
	<name>api-bnft-nwband-bpc</name>
	<description>benefits rate band processor</description>
	<parent>
		<groupId>com.trinet</groupId>
		<artifactId>triNet-super-pom</artifactId>
		<version>1.0</version>
	</parent>

	<scm>
		<connection>${connection}</connection>
		<developerConnection>${connection}</developerConnection>
		<url>ssh://git@stash.trinet-devops.com:7999</url>
		<tag>HEAD</tag>
	</scm>
	<properties>
		<java.version>1.8</java.version>
		<tomcat.version>8.0.3</tomcat.version>
		<api-security-version>[2.20190902.0.1, 2.20190902.0.999)</api-security-version> 
		<docker.image.prefix>trinet</docker.image.prefix>
		<junit.version>4.12</junit.version>
		<oracle-jdbc-driver-version>11.2.0</oracle-jdbc-driver-version>
		<json-version>20090211</json-version>
		<constants-generation-plugin.version>1.0.0</constants-generation-plugin.version>
		<jacoco.version>0.8.1</jacoco.version>
		<junit.jupiter.version>5.4.1</junit.jupiter.version>
		<junit.platform.version>1.4.1</junit.platform.version>
		<lombok.version>1.18.4</lombok.version>
		<rest-assured.version>3.1.0</rest-assured.version>
		<it.skip>true</it.skip>
	    <sonar.exclusions>src/main/java/com/trinet/bnftnwbandbatchprocessor/*.java,
		src/main/java/com/trinet/bnftnwbandbatchprocessor/conf/*.java,
		src/main/java/com/trinet/bnftnwbandbatchprocessor/conf/properties/*.java,
		src/main/java/com/trinet/bnftnwbandbatchprocessor/dao/*.java,
		src/main/java/com/trinet/bnftnwbandbatchprocessor/entity/batch/*.java,
		src/main/java/com/trinet/bnftnwbandbatchprocessor/entity/peoplesoft/*.java,
		src/main/java/com/trinet/bnftnwbandbatchprocessor/interceptor/*.java,
		src/main/java/com/trinet/bnftnwbandbatchprocessor/model/*.java,
		src/main/java/com/trinet/bnftnwbandbatchprocessor/repository/batch/*.java,
		src/main/java/com/trinet/bnftnwbandbatchprocessor/util/*.java,
		</sonar.exclusions>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>2.0.6.RELEASE</version>
				<type>pom</type>
				<scope>import</scope>
				<exclusions>
					<exclusion>
						<groupId>org.projectlombok</groupId>
						<artifactId>lombok</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-batch</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<exclusions>
				<exclusion>
					<groupId>com.zaxxer</groupId>
					<artifactId>HikariCP</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.batch</groupId>
			<artifactId>spring-batch-test</artifactId>

		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.194</version>
		</dependency>
		<dependency>
			<groupId>com.oracle</groupId>
			<artifactId>ojdbc6</artifactId>
			<version>${oracle-jdbc-driver-version}</version>
		</dependency>


	<dependency>
		<groupId>org.apache.logging.log4j</groupId>
		<artifactId>log4j-api</artifactId>
	</dependency>

	<dependency>
		<groupId>org.apache.logging.log4j</groupId>
		<artifactId>log4j-core</artifactId>
	</dependency>

	<dependency>
		<groupId>org.junit.jupiter</groupId>
		<artifactId>junit-jupiter-api</artifactId>
		<version>${junit.jupiter.version}</version><!--$NO-MVN-MAN-VER$ -->
		<scope>test</scope>
	</dependency>

	<dependency>
		<groupId>org.junit.jupiter</groupId>
		<artifactId>junit-jupiter-engine</artifactId>
		<version>${junit.jupiter.version}</version><!--$NO-MVN-MAN-VER$ -->
		<scope>test</scope>
	</dependency>

	<dependency>
		<groupId>org.junit.platform</groupId>
		<artifactId>junit-platform-launcher</artifactId>
		<version>${junit.platform.version}</version>
		<scope>test</scope>
	</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.5</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>2.17.0</version>
			<scope>test</scope>
		</dependency>

		<!-- BEGIN RESTAssured test dependencies -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>${rest-assured.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-path</artifactId>
			<version>${rest-assured.version}</version>
		</dependency>

		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-schema-validator</artifactId>
			<version>${rest-assured.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
		</dependency>

		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path-assert</artifactId>
		</dependency>
		
		<dependency>
			<groupId>com.trinet</groupId>
			<artifactId>api-security</artifactId>
			<version>${api-security-version}</version>
		</dependency>
		
		
		<!-- END RESTAssured test dependencies -->
	</dependencies>
	<build>
		<finalName>api-bnft-nwband-bpc</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<preparationGoals>war:war</preparationGoals>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>

			<!-- We need to override the plugin configuration in the base pom because
				this project does not have a web.xml file. Thanks super pom developers for
				taking all projects into consideration. -->
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
					<webResources>
						<resource>
							<directory>deploy</directory>
							<filtering>true</filtering>
						</resource>
					</webResources>
				</configuration>
				<executions>
					<execution>
						<id>default-war</id>
						<phase>package</phase>
						<goals>
							<goal>war</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>default-report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<encoding>UTF8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>target/generated-sources</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<dependencies>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>1.1.0</version>
					</dependency>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>${junit.jupiter.version}</version>
					</dependency>

				</dependencies>
				<configuration>
					<argLine>${argLine} -Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
					<skipTests>false</skipTests>
					<properties>
						<property>
							<name>listener</name>
							<value>org.sonar.java.jacoco.JUnitListener</value>
						</property>
					</properties>
					<additionalClasspathElements>
						<additionalClasspathElement>${project.basedir}/src/main/webapp</additionalClasspathElement>
					</additionalClasspathElements>
				</configuration>
			</plugin>

		</plugins>

	</build>

</project>
